--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
   </head>
   <body>
     <div id="root" class="w-full"></div>
+    <script>
+      if('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+              navigator.serviceWorker.register('./serviceworker.js')
+                  .then((reg) => console.log('Success: ', reg.scope))
+                  .catch((err) => console.log('Failure: ', err));
+          })
+      }
+  </script>
   </body>
 </html>
