--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/jave-movil/img/menu.png" />
+    <link rel="icon" type="image/svg+xml" href="/jave-movil/menu.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jave Movil</title>
     <link rel="manifest" href="/jave-movil/manifest.json">
